--- a/first.html
+++ b/first.html
@@ -17,8 +17,8 @@
   </h2>
 </div>
 <footer> <br>
-  <center><a href="second.html"><input type="button" value=" YES "></a><br> <br>
-  <a href="two.html"><input type="button" value=" NO "></a></center>
+  <center><a href="two.html"><input type="button" value=" YES "></a><br> <br>
+  <a href="third.html"><input type="button" value=" NO "></a></center>
 </footer>
 </body>
 <style>
